# fipe

./: .gitignore  LICENSE  pyproject.toml
fipe/: __init__.py  _predict.py  encoding.py  pruning.py  separation.py  tree.py  typing.py  utils.py
fipe/ensemble/: __init__.py  ensemble.py  features.py  isolation.py  parser.py  predict.py  tree.py
fipe/mip/: __init__.py  abc.py  feature.py  flow.py  oceans.py  oracle.py  prune.py
tests/: test_encoder.py  test_features.py  test_oracle.py  test_predict.py  test_prune.py  utils.py
